feat: Add more details about malware targets in slides/weekfive/index.qmd.

--- a/slides/weekfive/index.qmd
+++ b/slides/weekfive/index.qmd
@@ -46,5 +46,9 @@ format:
   - Windows operating systems
   - Web browsers
   - Android devices
+- Malware considers:
+  - How many users are affected?
+  - How easily can it infect and spread?
+  - How much money can it generate?
 
 :::
