--- a/projects/index.qmd
+++ b/projects/index.qmd
@@ -23,11 +23,11 @@ Three Easy Pieces](https://pages.cs.wisc.edu/~remzi/OSTEP/)
 
 ### Preparation
 
-- {{< iconify fa6-solid book-open size=18px >}} **Review**: Chapter One of
+- {{< iconify fa6-solid book-open size=18px >}} **Review**: Chapter one of
 [Computer Systems Security: Planning for
 Success](https://web.njit.edu/~rt494/security/)
 
-- {{< iconify fa6-solid lightbulb size=18px >}} **Insight**: Chapter One of
+- {{< iconify fa6-solid lightbulb size=18px >}} **Insight**: Chapter one of
 [CSP](https://web.njit.edu/~rt494/security/) explains that a server demonstrates
 *availability* if is up and running for valid users. However, if a server is
 running a process that contains a defect that results in a system crash, then
@@ -58,5 +58,41 @@ resources about building fuzzers:
 Interested in working on this project? See the [{{< iconify fa6-brands github
 size=18px >}}
 server-fuzzing-starter](https://github.com/SecuritySynapse/server-fuzzing-starter)
+template repository to get started! Questions? Share them in the [Security
+Synapse Discord Server](https://discord.gg/juUXz7d4Jh).
+
+## Project Two: Cryptography Benchmarking
+
+### Preparation
+
+- {{< iconify fa6-solid book-open size=18px >}} **Review**: Chapters one and two
+of [Computer Systems Security: Planning for
+Success](https://web.njit.edu/~rt494/security/) and Chapters four through twelve
+of [Cracking Codes with Python](https://inventwithpython.com/cracking/)
+
+- {{< iconify fa6-solid lightbulb size=18px >}} **Insight**: Chapter four
+through twelve of
+[CCP](https://inventwithpython.com/cracking/) introduce a wide variety of
+different cryptography algorithms an explain how they may be cracked. 
+
+- {{< iconify fa6-solid code size=18px >}} **Task**: This project invites you to
+implement a `cryptobenchmark` in the Python programming language that will
+automatically perform a doubling experiment to measure the encryption and
+decryption performance for the `Fernet` and `rFernet` ciphers.
+
+### Resources
+
+To learn more about fuzzing and to gather inspiration for your own
+implementation of the `serverfuzzer`, please consult the following technical
+resources about building fuzzers:
+
+- [Atheris: A Coverage-Guided, Native Python Fuzzer](https://github.com/google/atheris)
+- [AFL: American Fuzzy Lop, A Security-Oriented Fuzzer](https://github.com/google/AFL)
+- [Fuzzing: Breaking Things with Random Inputs](https://www.fuzzingbook.org/html/Fuzzer.html)
+- [Property-Based Testing with Hypothesis](https://github.com/HypothesisWorks/hypothesis)
+
+Interested in working on this project? See the [{{< iconify fa6-brands github
+size=18px >}}
+server-fuzzing-starter](https://github.com/SecuritySynapse/cryptography-benchmarking-starter)
 template repository to get started! Questions? Share them in the [Security
 Synapse Discord Server](https://discord.gg/juUXz7d4Jh).
