feat: Add a complex example of system output data in slides/weekfive/index.qmd.

--- a/slides/weekfive/index.qmd
+++ b/slides/weekfive/index.qmd
@@ -292,6 +292,40 @@ or C program?**
 
 :::
 
+## System Configuration Data
+
+```{.text style="font-size: 0.5em;"}
+151M             ┌── 592d5e7d-99f2-40dc-a83f-06f87c9894c8    │██▓▓▓░░                                               │   4%
+157M             ├── cd131393-d367-4d5b-aae9-8bcd2e853819    │███▓▓░░                                               │   4%
+308M           ┌─┴ 4c237d5e33167c88df3e45d9c8b59fdd4d727472  │████▓░░                                               │   7%
+341M         ┌─┴ CacheStorage                                │█████░░                                               │   8%
+347M       ┌─┴ Service Worker                                │█████░░                                               │   8%
+381M     ┌─┴ Default                                         │█████░░                                               │   9%
+476M   ┌─┴ chromium                                          │███████                                               │  12%
+171M   │   ┌── modules                                       │███░░░░░░░░                                           │   4%
+171M   │ ┌─┴ 0.0.67                                          │███░░░░░░░░                                           │   4%
+296M   │ │ ┌── js                                            │████░░░░░░░                                           │   7%
+296M   │ ├─┴ Code Cache                                      │████░░░░░░░                                           │   7%
+338M   │ │ ┌── Cache_Data                                    │█████░░░░░░                                           │   8%
+338M   │ ├─┴ Cache                                           │█████░░░░░░                                           │   8%
+853M   ├─┴ discord                                           │███████████                                           │  21%
+148M   │       ┌── 004                                       │██▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒                   │   4%
+149M   │     ┌─┴ File System                                 │██▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒                   │   4%
+337M   │     ├── IndexedDB                                   │█████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒                   │   8%
+319M   │     │   ┌── 8cbb992fe0cd9ef960e69a214646bd270516a23e│█████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒                   │   8%
+153M   │     │   │ ┌── efae9b38-28ca-46be-9a0a-7e9a7d6f80e0  │██▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒                   │   4%
+159M   │     │   │ ├── 7e999286-e8e9-4508-b39a-2b49d8761bb5  │███▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒                   │   4%
+160M   │     │   │ ├── 13b2d983-8a6b-4e6e-a887-401635b378ac  │███▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒                   │   4%
+581M   │     │   ├─┴ 4c237d5e33167c88df3e45d9c8b59fdd4d727472│████████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒                   │  14%
+1.8G   │     │ ┌─┴ CacheStorage                              │████████████████████████▓▓▓▓▓▓▓▓▒▒▒                   │  44%
+1.8G   │     ├─┴ Service Worker                              │█████████████████████████▓▓▓▓▓▓▓▒▒▒                   │  46%
+2.4G   │   ┌─┴ Default                                       │████████████████████████████████▒▒▒                   │  60%
+2.6G   │ ┌─┴ Brave-Browser                                   │███████████████████████████████████                   │  65%
+2.6G   ├─┴ BraveSoftware                                     │███████████████████████████████████                   │  65%
+4.0G ┌─┴ .                                                   │█████████████████████████████████████████████████████ │ 100%
+
+```
+
 ## Collecting System Data
 
 ```python
@@ -342,6 +376,8 @@ Total files: 2802
 - How could this program be obfuscated?
 
 :::
+
+
 
 ## Obfuscation of Data Collection
 
